sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: an expression of type Null is ineligible for implicit conversion
  var i: Int = null
               ^AlgBubbleSort1:3: error: type mismatch;
 found   : Null(null)
 required: Int
  var i: Int = null
               ^AlgBubbleSort1:4: error: an expression of type Null is ineligible for implicit conversion
  var j: Int = null
               ^AlgBubbleSort1:4: error: type mismatch;
 found   : Null(null)
 required: Int
  var j: Int = null
               ^