sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var i: Int = null
  var j: Int = null
  for (compteur <- 1 to getNombreValeurs()){
    i = getValeur(compteur)
    j = getValeur(compteur + 1)
    if (plusPetit(j,i)) {
      echange(i,j)
    }
  }
}